# Akari

./: README.md  main.py  setup.cfg
AkarinClient/: main.py
AkarinClient/src/: polling.py
AkarinServer/: main.py
AkarinServer/src/: polling.py  server.py
client/: main.py
client/src/: config.py  exceptions.py  handlers.py  jellyfin.py  kirika.py  networking.py  polling.py
server/: main.py
server/src/: __init__.py  client_routes.py  frontend_resources.py  frontend_routes.py  polling.py  server.py
server/templates/: index.html
