[metadata]
name=Akarin
version=0.0.1
description=Serve files from local to network
long_description= file: README.md
long_description_content_type=text/markdown
author=kamuridesu
author_email=myk.gata14@gmail.com
url=
keywords=python server local
license=MIT
[options]
zip_safe = False
packages =
    AkarinClient
install_requires =
    Shimarin